// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicProjectPage renders correctly with no end date 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation2"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      <div
        class="MuiBox-root MuiBox-root-20"
      >
        <div
          class="MuiBox-root MuiBox-root-21"
        >
          <div
            class="MuiBox-root MuiBox-root-22"
          >
            <h1
              class="MuiTypography-root makeStyles-spacingRight-5 MuiTypography-h1"
            >
              Test Project Name
            </h1>
            <div
              class="MuiChip-root makeStyles-chip-2 makeStyles-chipActive-3 MuiChip-sizeSmall"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall"
              >
                ACTIVE
              </span>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-23"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
            >
              <span>
                <span>
                  Start Date:
                </span>
                 Oct 10, 1998
              </span>
            </h6>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthXl"
  >
    <div
      class="MuiBox-root MuiBox-root-24"
    >
      <aside
        class="MuiBox-root MuiBox-root-25"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
        >
          <nav
            aria-label="Project Navigation"
            class="MuiList-root makeStyles-projectNav-1 MuiList-padding"
            role="navigation"
          >
            <a
              class="MuiListItem-root MuiListItem-gutters"
              href="/admin/projects/details"
            >
              <div
                class="MuiListItemIcon-root"
              >
                <svg
                  role="presentation"
                  style="width: 1.5rem; height: 1.5rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Project Details
                </span>
              </div>
            </a>
            <a
              class="MuiListItem-root MuiListItem-gutters"
              href="/admin/projects/attachments"
            >
              <div
                class="MuiListItemIcon-root"
              >
                <svg
                  role="presentation"
                  style="width: 1.5rem; height: 1.5rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.5,6V17.5A4,4 0 0,1 12.5,21.5A4,4 0 0,1 8.5,17.5V5A2.5,2.5 0 0,1 11,2.5A2.5,2.5 0 0,1 13.5,5V15.5A1,1 0 0,1 12.5,16.5A1,1 0 0,1 11.5,15.5V6H10V15.5A2.5,2.5 0 0,0 12.5,18A2.5,2.5 0 0,0 15,15.5V5A4,4 0 0,0 11,1A4,4 0 0,0 7,5V17.5A5.5,5.5 0 0,0 12.5,23A5.5,5.5 0 0,0 18,17.5V6H16.5Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Attachments
                </span>
              </div>
            </a>
          </nav>
        </div>
      </aside>
      <article
        class="MuiBox-root MuiBox-root-26"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders public project page when project is loaded (project is active) 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation2"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      <div
        class="MuiBox-root MuiBox-root-6"
      >
        <div
          class="MuiBox-root MuiBox-root-7"
        >
          <div
            class="MuiBox-root MuiBox-root-8"
          >
            <h1
              class="MuiTypography-root makeStyles-spacingRight-5 MuiTypography-h1"
            >
              Test Project Name
            </h1>
            <div
              class="MuiChip-root makeStyles-chip-2 makeStyles-chipActive-3 MuiChip-sizeSmall"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall"
              >
                ACTIVE
              </span>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-9"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
            >
              <span>
                Oct 10, 1998 - Feb 26, 2021
              </span>
            </h6>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthXl"
  >
    <div
      class="MuiBox-root MuiBox-root-10"
    >
      <aside
        class="MuiBox-root MuiBox-root-11"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
        >
          <nav
            aria-label="Project Navigation"
            class="MuiList-root makeStyles-projectNav-1 MuiList-padding"
            role="navigation"
          >
            <a
              class="MuiListItem-root MuiListItem-gutters"
              href="/admin/projects/details"
            >
              <div
                class="MuiListItemIcon-root"
              >
                <svg
                  role="presentation"
                  style="width: 1.5rem; height: 1.5rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Project Details
                </span>
              </div>
            </a>
            <a
              class="MuiListItem-root MuiListItem-gutters"
              href="/admin/projects/attachments"
            >
              <div
                class="MuiListItemIcon-root"
              >
                <svg
                  role="presentation"
                  style="width: 1.5rem; height: 1.5rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.5,6V17.5A4,4 0 0,1 12.5,21.5A4,4 0 0,1 8.5,17.5V5A2.5,2.5 0 0,1 11,2.5A2.5,2.5 0 0,1 13.5,5V15.5A1,1 0 0,1 12.5,16.5A1,1 0 0,1 11.5,15.5V6H10V15.5A2.5,2.5 0 0,0 12.5,18A2.5,2.5 0 0,0 15,15.5V5A4,4 0 0,0 11,1A4,4 0 0,0 7,5V17.5A5.5,5.5 0 0,0 12.5,23A5.5,5.5 0 0,0 18,17.5V6H16.5Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Attachments
                </span>
              </div>
            </a>
          </nav>
        </div>
      </aside>
      <article
        class="MuiBox-root MuiBox-root-12"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PublicProjectPage renders public project page when project is loaded (project is completed) 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation2"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      <div
        class="MuiBox-root MuiBox-root-13"
      >
        <div
          class="MuiBox-root MuiBox-root-14"
        >
          <div
            class="MuiBox-root MuiBox-root-15"
          >
            <h1
              class="MuiTypography-root makeStyles-spacingRight-5 MuiTypography-h1"
            >
              Test Project Name
            </h1>
            <div
              class="MuiChip-root makeStyles-chip-2 makeStyles-chipCompleted-4 MuiChip-sizeSmall"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall"
              >
                COMPLETED
              </span>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-16"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
            >
              <span>
                Oct 10, 1998 - Feb 26, 2021
              </span>
            </h6>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthXl"
  >
    <div
      class="MuiBox-root MuiBox-root-17"
    >
      <aside
        class="MuiBox-root MuiBox-root-18"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
        >
          <nav
            aria-label="Project Navigation"
            class="MuiList-root makeStyles-projectNav-1 MuiList-padding"
            role="navigation"
          >
            <a
              class="MuiListItem-root MuiListItem-gutters"
              href="/admin/projects/details"
            >
              <div
                class="MuiListItemIcon-root"
              >
                <svg
                  role="presentation"
                  style="width: 1.5rem; height: 1.5rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Project Details
                </span>
              </div>
            </a>
            <a
              class="MuiListItem-root MuiListItem-gutters"
              href="/admin/projects/attachments"
            >
              <div
                class="MuiListItemIcon-root"
              >
                <svg
                  role="presentation"
                  style="width: 1.5rem; height: 1.5rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.5,6V17.5A4,4 0 0,1 12.5,21.5A4,4 0 0,1 8.5,17.5V5A2.5,2.5 0 0,1 11,2.5A2.5,2.5 0 0,1 13.5,5V15.5A1,1 0 0,1 12.5,16.5A1,1 0 0,1 11.5,15.5V6H10V15.5A2.5,2.5 0 0,0 12.5,18A2.5,2.5 0 0,0 15,15.5V5A4,4 0 0,0 11,1A4,4 0 0,0 7,5V17.5A5.5,5.5 0 0,0 12.5,23A5.5,5.5 0 0,0 18,17.5V6H16.5Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
              <div
                class="MuiListItemText-root"
              >
                <span
                  class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                >
                  Attachments
                </span>
              </div>
            </a>
          </nav>
        </div>
      </aside>
      <article
        class="MuiBox-root MuiBox-root-19"
      />
    </div>
  </div>
</DocumentFragment>
`;
